2013-10-01  Tobias Burnus  <burnus@net-b.de>

	PR fortran/58579
	* trans-expr.c (gfc_conv_string_tmp): Correctly obtain
	the byte size of a single character.

2013-09-27  Janne Blomqvist  <jb@gcc.gnu.org>

	* intrinsic.texi (DATE_AND_TIME): Fix example.

2013-09-25  Tobias Burnus  <burnus@net-b.de>

	PR fortran/58436
	* class.c (generate_finalization_wrapper): Handle CLASS(*).

2013-09-25  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57697
	PR fortran/58469
	* resolve.c (generate_component_assignments): Avoid double free
	at runtime and freeing a still-being used expr.

2013-09-25  Tom Tromey  <tromey@redhat.com>

	* Make-lang.in (fortran_OBJS): Use fortran/gfortranspec.o.
	(gfortranspec.o): Remove.
	(CFLAGS-fortran/gfortranspec.o): New variable.
	(GFORTRAN_D_OBJS): Update.
	($(F95_PARSER_OBJS), fortran/openmp.o, GFORTRAN_TRANS_DEPS)
	(fortran/f95-lang.o, fortran/scanner.o, fortran/convert.o)
	(fortran/frontend-passes.o, fortran/trans.o, fortran/trans-decl.o)
	(fortran/trans-types, fortran/trans-const.o, fortran/trans-expr.o)
	(fortran/trans-stmt.o, fortran/trans-openmp.o, fortran/trans-io.o)
	(fortran/trans-array.o, fortran/trans-intrinsic.o)
	(fortran/dependency.o, fortran/trans-common.o, fortran/resolve.o)
	(fortran/data.o, fortran/options.o, fortran/cpp.o)
	(fortran/scanner.o, fortran/module.o): Remove.

2013-09-25  Tom Tromey  <tromey@redhat.com>

	* Make-lang.in (gfortranspec.o): Don't use subshell.

2013-09-23  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/58355
	* decl.c (check_extended_derived_type): Prevent segfault, modify error
	message.

2013-09-20  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/58099
	* expr.c (gfc_check_pointer_assign): Remove second call to
	'gfc_compare_interfaces' with swapped arguments.
	* interface.c (gfc_compare_interfaces): Symmetrize the call to
	'check_result_characteristics' by calling it with swapped arguments.

2013-09-18  Tobias Burnus  <burnus@net-b.de>

	* expr.c (gfc_check_assign_symbol): Free lvalue.ref.
